--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,7 @@
     <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-            <source>1.8</source>
-            <target>1.8</target>
+            <release>11</release>
         </configuration>
     </plugin>
 </plugins>
